--- a/README.adoc
+++ b/README.adoc
@@ -1,2 +1,2 @@
-# developerbhuwan.com
+= developerbhuwan.com
 Repository for sample examples for articles or posts published on http://www.developerbhuwan.com/
