--- a/README.adoc
+++ b/README.adoc
@@ -1,2 +1,12 @@
 = developerbhuwan.com
 Repository for sample examples for articles or posts published on http://www.developerbhuwan.com/
+
+Posts:
+
+|===
+| Post Title | Web Link | Example
+
+| Deploying Micro Services in Kubernetes
+| http://www.developerbhuwan.com/2018/06/23/deploying-micro-services-in-kubernetes/:[Blog Post]
+| https://github.com/devbhuwan/typewriter/tree/master/deploying-micro-services-in-kubernetes:[Github]
+|===
