--- a/event-storming-and-ddd-using-spring-boot/README-EXAMPLE.adoc
+++ b/event-storming-and-ddd-using-spring-boot/README-EXAMPLE.adoc
@@ -4,11 +4,15 @@
 
 First of all, let's discover domain events on student management system.
 
-image::docs/Discovering Domain Events.jpg["Discovering Domain Events"]
+image::docs/Discovering Domain Events.jpg[Discovering Domain Events]
 
 Then, identify cause of each domain event like:
 
 image::docs/Identifying cause of each Domain Event.jpg[Identifying cause of each Domain Event]
+
+Now, identifying invariants or conditions of each Domain Event
+
+image::docs/Identifying invariants or conditions of each Domain Event.jpg[Identifying invariants or conditions of each Domain Event]
 
 
 
